# weather-app

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
src/weather_app/: __init__.py  cache.py  cli.py  client.py  config.py  models.py  service.py
src/weather_app/web/: __init__.py  app.py
src/weather_app/web/static/: app.js  index.html  style.css
tests/: conftest.py  test_models_cache.py  test_service.py  test_web.py
