[project]
name = "weather-app"
version = "0.1.0"
description = "Live weather via the free Open-Meteo API, with a CLI and a web UI."
readme = "README.md"
authors = [
    { name = "mahiprime2001", email = "tarunmatta5669@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
]

[project.scripts]
weather = "weather_app.cli:app"
weather-web = "weather_app.web.app:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
